language/move-lang/tests/move_check/typing/invalid_type_acquire.exp
error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:18:9 ───
    │
 18 │         T,
    │         ^ Invalid acquires item. Expected a resource name, but got a type parameter
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:19:9 ───
    │
 19 │         u64,
    │         ^^^ Invalid acquires item. Expected a resource name, but got a builtin type
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:20:9 ───
    │
 20 │         X::R,
    │         ^^^^ Invalid acquires item
    ·
 20 │         X::R,
    │            - The struct 'R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:21:9 ───
    │
 21 │         S,
    │         ^ Invalid acquires item. Expected a nominal resource.
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:30:9 ───
    │
 30 │         destroy(move_from(a));
    │         ^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:30:17 ───
    │
 30 │         destroy(move_from(a));
    │                 ^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:31:17 ───
    │
 31 │         destroy(move_from<T>(a));
    │                 ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 31 │         destroy(move_from<T>(a));
    │                           - Expected a nominal resource. Found the type: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:32:17 ───
    │
 32 │         destroy(move_from<u64>(a));
    │                 ^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 32 │         destroy(move_from<u64>(a));
    │                           --- Expected a nominal resource. Found the type: 'u64'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:33:17 ───
    │
 33 │         destroy(move_from<X::R>(a));
    │                 ^^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 33 │         destroy(move_from<X::R>(a));
    │                           ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:34:17 ───
    │
 34 │         destroy(move_from<S>(a));
    │                 ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 34 │         destroy(move_from<S>(a));
    │                           - Expected a nominal resource. Found the type: '0x1::M::S'
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:36:9 ───
    │
 36 │         borrow_global(a);
    │         ^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:37:9 ───
    │
 37 │         borrow_global<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 37 │         borrow_global<T>(a);
    │                       - Expected a nominal resource. Found the type: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:38:9 ───
    │
 38 │         borrow_global<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 38 │         borrow_global<u64>(a);
    │                       --- Expected a nominal resource. Found the type: 'u64'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:39:9 ───
    │
 39 │         borrow_global<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 39 │         borrow_global<X::R>(a);
    │                       ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:40:9 ───
    │
 40 │         borrow_global<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 40 │         borrow_global<S>(a);
    │                       - Expected a nominal resource. Found the type: '0x1::M::S'
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:42:9 ───
    │
 42 │         borrow_global_mut(a);
    │         ^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:43:9 ───
    │
 43 │         borrow_global_mut<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 43 │         borrow_global_mut<T>(a);
    │                           - Expected a nominal resource. Found the type: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:44:9 ───
    │
 44 │         borrow_global_mut<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 44 │         borrow_global_mut<u64>(a);
    │                           --- Expected a nominal resource. Found the type: 'u64'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:45:9 ───
    │
 45 │         borrow_global_mut<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 45 │         borrow_global_mut<X::R>(a);
    │                           ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:46:9 ───
    │
 46 │         borrow_global_mut<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 46 │         borrow_global_mut<S>(a);
    │                           - Expected a nominal resource. Found the type: '0x1::M::S'
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:48:9 ───
    │
 48 │         exists(a);
    │         ^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:49:9 ───
    │
 49 │         exists<T>(a);
    │         ^^^^^^^^^^^^ Invalid call to exists.
    ·
 49 │         exists<T>(a);
    │                - Expected a nominal resource. Found the type: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:50:9 ───
    │
 50 │         exists<u64>(a);
    │         ^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 50 │         exists<u64>(a);
    │                --- Expected a nominal resource. Found the type: 'u64'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:51:9 ───
    │
 51 │         exists<X::R>(a);
    │         ^^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 51 │         exists<X::R>(a);
    │                ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:52:9 ───
    │
 52 │         exists<S>(a);
    │         ^^^^^^^^^^^^ Invalid call to exists.
    ·
 52 │         exists<S>(a);
    │                - Expected a nominal resource. Found the type: '0x1::M::S'
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:54:9 ───
    │
 54 │         move_to_sender(any());
    │         ^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:54:24 ───
    │
 54 │         move_to_sender(any());
    │                        ^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:55:9 ───
    │
 55 │         move_to_sender<T>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 55 │         move_to_sender<T>(any());
    │                        - Expected a nominal resource. Found the type: 'T'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:56:9 ───
    │
 56 │         move_to_sender<u64>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 56 │         move_to_sender<u64>(any());
    │                        --- Expected a nominal resource. Found the type: 'u64'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:57:9 ───
    │
 57 │         move_to_sender<X::R>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 57 │         move_to_sender<X::R>(any());
    │                        ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:58:9 ───
    │
 58 │         move_to_sender<S>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 58 │         move_to_sender<S>(any());
    │                        - Expected a nominal resource. Found the type: '0x1::M::S'
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

